[package]
name = "async-graphql-logger"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kurotych/async-graphql-logger"
keywords = ["gql", "logger", "async-graphql"]
description = "Minimalistic logger extension for async-graphql library"
readme = "README.md"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]

[dependencies]
async-graphql = "7.0.1"
async-trait = "0.1.77"
chrono = "0.4.33"
log = "0.4.20"
rand = "0.8.5"
tokio = {version = "1.35.1", features = ["sync"]}

[dev-dependencies]
async-graphql-axum = "7"
axum = "0.7"
axum-server = "0.6"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
env_logger = "0.10.0"

